syntax = "proto3";

import "streamlit/proto/WidgetStates.proto";


message ClientState {
  string query_string = 1;
  WidgetStates widget_states = 2;
  string page_script_hash = 3;
  string page_name = 4;
}
