syntax = "proto3";

import "streamlit/proto/AppPage.proto";

// Message used to tell the client that the app's pages have changed.
message PagesChanged {
  repeated AppPage app_pages = 1;
}
